err/phony.err
Listing '.'...
Compiling './._examples.py'...
*** Sorry: ValueError: source code string cannot contain null bytes
Compiling './._setup.py'...
*** Sorry: ValueError: source code string cannot contain null bytes
Listing './bin'...
Compiling './examples.py'...
***   File "./examples.py", line 3
    print name()
             ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Phony-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/phony'...
Listing './lib/python3.5/site-packages/phony/generate'...
Listing './lib/python3.5/site-packages/phony/us'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './pip-egg-info'...
Listing './pip-egg-info/Phony.egg-info'...
Compiling './setup.py'...
Listing './share'...
Listing './share/python-wheels'...
